syntax = "proto3";
package github.redbloodpixel.filesexchange.fileservice.v1;

option go_package = "github.com/redblood-pixel/FilesExchanger/gen/v1;fsv1";

import "google/protobuf/timestamp.proto";

message FileContent {
    bytes data = 1;
}

message FileMetadata {
    string filename = 1;
    google.protobuf.Timestamp created_at = 2;
    google.protobuf.Timestamp updated_at = 3;
}

message UploadFileRequest {
    FileMetadata file = 1;
    FileContent content = 2;
}

message UploadFileResponse {
    string status = 1;
    int32 size = 2;
}

message ListFilesResponse {
    repeated FileMetadata files = 1;
}

message DownloadFileRequest {
    string filename = 1;
}

message DownloadFileResponse {
    FileContent content = 1;
}